# lom_charts

./: main.py  pyproject.toml
notebooks/: Main charts.ipynb  Mapa a nivel municipip.ipynb
