[project]
name = "lom-charts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "contextily>=1.6.2",
    "geopandas>=1.1.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pyglottolog>=3.15.0",
]
